2016-05-10      Gaius Mulley <gaius@gnu.org>

	* gm2/mc/decl.mod:  write and writeln call FlushBuffer
	  as a debugging aid.  tempName returns a String.
          makeIntermediateType new procedure function.
          simplifyType call tempName and makeIntermediateType.
          doSimplifyNode also simplifies pointer types.
          outDeclsDefC outputs constants, types and then variables.
          walkPointer returns completed if the type is partial or done.
          walkVarientField returns partial if field type is on the partialQ.
          tryPartial moves pointer types.
          outputPartial moves over pointer types and issues '*' accordingly.

2016-05-09      Gaius Mulley <gaius@gnu.org>

	* gm2/mc/decl.mod:  many changes and bug fixes.  Modula-2 output
	  of data structures implemented and pretty printing of M2, C
          data structures implemented.
	* gm2/mc/mcOptions.mod:  corrected --olang= processing.
	* gm2/mc/mcPretty.def:  pushPretty and popPretty
          (New procedure functions) defined.
	* gm2/mc/mcPretty.mod:  pushPretty and popPretty
          (New procedure functions) implemented.

2016-04-27      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  force the mc-boot rule.
	* gm2/bnf/mc-3.bnf:  many bug fixes and finished implementing
          record/varient record handling.
	* gm2/mc/decl.def:  add second parameter to
          buildVarientFieldRecord.
	* gm2/mc/decl.mod:  min, max new nodes.  makeArray skip type.
          buildVarientFieldRecord add second parameter and use it.
          Many features added and code added.
	* gm2/mc/mcOptions.mod:  new option --ignore-fq.
	* gm2/mc/mcStack.def:  depth (New procedure function).
	* gm2/mc/mcStack.mod:  implemented depth.

2016-04-23      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  rewrite of mc-autogen which currently tests
	  the translation of the library modules required by mc.
	* gm2/bnf/mc-1.bnf:  bug fix to allow procedures to be declared