@@ -1728,6 +1728,20 @@ MC-LIB-DEFS = Args.def ASCII.def Assertion.def Break.def  \
               SYSTEM.def TimeString.def \
               UnixArgs.def
 
+MC-LIB-MODS = Args.mod ASCII.mod Assertion.mod Break.mod  \
+              CmdArgs.mod Debug.mod \
+              DynamicStrings.mod Environment.mod \
+              FIO.mod FormatStrings.mod FpuIO.mod \
+              Indexing.mod IO.mod \
+              RTExceptions.mod RTint.mod \
+              M2EXCEPTION.mod M2RTS.mod \
+              MemUtils.mod NumberIO.mod PushBackInput.mod \
+              SArgs.mod \
+              SFIO.mod StdIO.mod Storage.mod StrCase.mod \
+              StringConvert.mod StrIO.mod StrLib.mod \
+              SysExceptions.def SysStorage.mod \
+              SYSTEM.mod TimeString.mod
+
 MC-DEFS = alists.def  decl.def  Indexing.def  lists.def  m2flex.def \
                mcComp.def  mcDebug.def  mcError.def  mcFileName.def \
                mcflex.def  mcLexBuf.def  mcMetaError.def  mcOptions.def \
@@ -1736,22 +1750,42 @@ MC-DEFS = alists.def  decl.def  Indexing.def  lists.def  m2flex.def \
                mcSearch.def  mcStack.def  nameKey.def  symbolKey.def \
                varargs.def  wlists.def
 
+MC-MODS = alists.mod  decl.mod  Indexing.mod  lists.mod  m2flex.mod \
+               mcComp.mod  mcDebug.mod  mcError.mod  mcFileName.mod \
+               mcflex.mod  mcLexBuf.mod  mcMetaError.mod  mcOptions.mod \
+               mcPreprocess.mod \
+               mcPretty.mod  mcPrintf.mod  mcQuiet.mod  mcReserved.mod \
+               mcSearch.mod  mcStack.mod  nameKey.mod  symbolKey.mod \
+               varargs.mod  wlists.mod
+
+MC-AUTO-MODS = mcp1.mod   mcp2.mod  mcp3.mod  mcp4.mod
+
 BUILD-MC-BOOT-H =  $(MC-LIB-DEFS:%.def=gm2/mc-boot/$(SRC_PREFIX)%.h) \
                    $(MC-DEFS:%.def=gm2/mc-boot/$(SRC_PREFIX)%.h)
+
+BUILD-MC-BOOT-C =  $(MC-LIB-MODS:%.mod=gm2/mc-boot/$(SRC_PREFIX)%.c) \
+                   $(MC-MODS:%.mod=gm2/mc-boot/$(SRC_PREFIX)%.c)
 
 $(objdir)/gm2/mc-boot: force
 	mkdir -p gm2/mc-boot
 	$(RM) gm2/mc-boot/*h
 
-mc-autogen: mc-devel $(GM2_DIRS) $(BUILD-MC-BOOT-H)
+mc-autogen: mc-devel $(GM2_DIRS) $(BUILD-MC-BOOT-H) $(BUILD-MC-BOOT-C) # $(BUILD-MC-BOOT-AUTO-C)
 	for i in gm2/mc-boot/*.h ; do echo "#include \"`basename $$i .h`.h\"" > gm2/mc-boot/f.c ; echo "main () {}" >> gm2/mc-boot/f.c ; echo "compiling $$i" ; gcc -g -c -o /tmp/f.o gm2/mc-boot/f.c ; done
 
 
 gm2/mc-boot/$(SRC_PREFIX)%.h: $(srcdir)/gm2/mc/%.def
-	./mc -I$(srcdir)/gm2/gm2-libs:$(srcdir)/gm2/mc --h-file-prefix=$(SRC_PREFIX) -o=$@ $<
+	./mc -I$(srcdir)/gm2/mc:$(srcdir)/gm2/gm2-libs:$(srcdir)/gm2/gm2-libs-iso --h-file-prefix=$(SRC_PREFIX) -o=$@ $<
 
 gm2/mc-boot/$(SRC_PREFIX)%.h: $(srcdir)/gm2/gm2-libs/%.def
-	./mc -I$(srcdir)/gm2/gm2-libs:$(srcdir)/gm2/mc --h-file-prefix=$(SRC_PREFIX) -o=$@ $<
+	./mc -I$(srcdir)/gm2/mc:$(srcdir)/gm2/gm2-libs:$(srcdir)/gm2/gm2-libs-iso --h-file-prefix=$(SRC_PREFIX) -o=$@ $<
+
+gm2/mc-boot/$(SRC_PREFIX)%.c: $(srcdir)/gm2/mc/%.mod
+	./mc -I$(srcdir)/gm2/mc:$(srcdir)/gm2/gm2-libs:$(srcdir)/gm2/gm2-libs-iso --extended-opaque --h-file-prefix=$(SRC_PREFIX) -o=$@ $<
+
+gm2/mc-boot/$(SRC_PREFIX)%.c: $(srcdir)/gm2/gm2-libs/%.mod
+	./mc -I$(srcdir)/gm2/mc:$(srcdir)/gm2/gm2-libs:$(srcdir)/gm2/gm2-libs-iso --extended-opaque --h-file-prefix=$(SRC_PREFIX) -o=$@ $<
+
 
 #
 #  mc-bootstrap - compiles mc using the C version previously
